force-app/main/default/objects/Requisition__c/Requisition__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Requisition</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Requisition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>