force-app/main/default/objects/Requisition__c/fields/AdministratorExecutiveDirector__c.field-meta.xml
<CustomField>
    <fullName>AdministratorExecutiveDirector__c</fullName>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Administrator / Executive Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>