force-app/main/default/objects/Requisition__c/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Board / Program</label>
    <referenceTo>BoardProgram__c</referenceTo>
    <relationshipLabel>Requisitions</relationshipLabel>
    <relationshipName>Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>