force-app/main/default/objects/Requisition__c/fields/ChapterNumber__c.field-meta.xml
<CustomField>
    <fullName>ChapterNumber__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Chapter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>