force-app/main/default/objects/Requisition__c/fields/ChapterTitle__c.field-meta.xml
<CustomField>
    <fullName>ChapterTitle__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Chapter Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>