force-app/main/default/objects/Requisition__c/fields/Collated__c.field-meta.xml
<CustomField>
    <fullName>Collated__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Collated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collated</fullName>
            </value>
            <value>
                <fullName>Uncollated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>