force-app/main/default/objects/Requisition__c/fields/ColorofPaper__c.field-meta.xml
<CustomField>
    <fullName>ColorofPaper__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Color of Paper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>