force-app/main/default/objects/Requisition__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>PacPoint-FT120419-Created for PVL Sprint 2 Phase 1</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>