force-app/main/default/objects/Requisition__c/fields/ConfirmPrinting__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPrinting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm that you are ready to Print All</label>
    <type>Checkbox</type>
</CustomField>