force-app/main/default/objects/Requisition__c/fields/ConfirmSignature__c.field-meta.xml
<CustomField>
    <fullName>ConfirmSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <inlineHelpText>By checking this box you are signing this Requisition for Duplication Services to print all Renewal Notices for this License Type</inlineHelpText>
    <label>Confirm Signature</label>
    <type>Checkbox</type>
</CustomField>