force-app/main/default/objects/Requisition__c/fields/ConfirmTestPrinting__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTestPrinting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm to print one test document</label>
    <type>Checkbox</type>
</CustomField>