force-app/main/default/objects/Requisition__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>