force-app/main/default/objects/Requisition__c/fields/DateSenttoPrinter__c.field-meta.xml
<CustomField>
    <fullName>DateSenttoPrinter__c</fullName>
    <label>Date Sent to Printer</label>
    <type>DateTime</type>
</CustomField>