force-app/main/default/objects/Requisition__c/fields/DatetobeCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>DatetobeCompletedBy__c</fullName>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Date to be Completed By</label>
    <required>true</required>
    <type>Date</type>
</CustomField>