force-app/main/default/objects/Requisition__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PVL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>