force-app/main/default/objects/Requisition__c/fields/EnvelopeSize__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeSize__c</fullName>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Envelope Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1 Envelopes - 3 5/8 x 5 1/8</fullName>
            </value>
            <value>
                <fullName>A2 Envelopes - 4 3/8 x 5 3/4</fullName>
            </value>
            <value>
                <fullName>A6 Envelopes - 4 3/4 x 6 1/2</fullName>
            </value>
            <value>
                <fullName>A7 Envelopes - 5 1/4 x 7 1/4</fullName>
            </value>
            <value>
                <fullName>A8 Envelopes - 5 1/2 x 8 1/8</fullName>
            </value>
            <value>
                <fullName>A9 Envelopes - 5 3/4 x 8 3/4</fullName>
            </value>
            <value>
                <fullName>A10 Envelopes - 6 x 9 1/2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>