force-app/main/default/objects/Requisition__c/fields/Folded__c.field-meta.xml
<CustomField>
    <fullName>Folded__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Folded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fold</fullName>
            </value>
            <value>
                <fullName>No Fold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>