force-app/main/default/objects/Requisition__c/fields/HARRules__c.field-meta.xml
<CustomField>
    <fullName>HARRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>HAR (Rules)</label>
    <type>Checkbox</type>
</CustomField>