force-app/main/default/objects/Requisition__c/fields/HRSLaws__c.field-meta.xml
<CustomField>
    <fullName>HRSLaws__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>HRS (Laws)</label>
    <type>Checkbox</type>
</CustomField>