force-app/main/default/objects/Requisition__c/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <description>PacPoint-MV010419 - Created for PVL phase 1. Used to default instructions on the Requisition actions</description>
    <label>Important</label>
    <type>TextArea</type>
</CustomField>