force-app/main/default/objects/Requisition__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Requisitions</relationshipLabel>
    <relationshipName>Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>