force-app/main/default/objects/Requisition__c/fields/NumberofBoxes__c.field-meta.xml
<CustomField>
    <fullName>NumberofBoxes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Number of Boxes</label>
    <type>Checkbox</type>
</CustomField>