force-app/main/default/objects/Requisition__c/fields/NumberofCopies__c.field-meta.xml
<CustomField>
    <fullName>NumberofCopies__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Number of Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>