force-app/main/default/objects/Requisition__c/fields/OneTwoSided__c.field-meta.xml
<CustomField>
    <fullName>OneTwoSided__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>One / Two Sided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run on ONE side</fullName>
            </value>
            <value>
                <fullName>Run on TWO sides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>