force-app/main/default/objects/Requisition__c/fields/PaperSize__c.field-meta.xml
<CustomField>
    <fullName>PaperSize__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Paper Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter - ​8 1⁄2 × 11</fullName>
            </value>
            <value>
                <fullName>Legal - 8 1⁄2 × 14</fullName>
            </value>
            <value>
                <fullName>Tabloid - 11 × 17</fullName>
            </value>
            <value>
                <fullName>Ledger - 17 × 11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>