force-app/main/default/objects/Requisition__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>