force-app/main/default/objects/Requisition__c/fields/Requisitioner__c.field-meta.xml
<CustomField>
    <fullName>Requisitioner__c</fullName>
    <defaultValue>$User.FirstName + &quot; &quot;+ &quot; &quot; +$User.LastName</defaultValue>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Requisitioner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>