force-app/main/default/objects/Requisition__c/fields/SampleAttached__c.field-meta.xml
<CustomField>
    <fullName>SampleAttached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Sample Attached</label>
    <type>Checkbox</type>
</CustomField>