force-app/main/default/objects/Requisition__c/fields/SignedBy__c.field-meta.xml
<CustomField>
    <fullName>SignedBy__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>