force-app/main/default/objects/Requisition__c/fields/Staple__c.field-meta.xml
<CustomField>
    <fullName>Staple__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Staple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staple</fullName>
            </value>
            <value>
                <fullName>No Staple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>