force-app/main/default/objects/Requisition__c/fields/TitleofDocument__c.field-meta.xml
<CustomField>
    <fullName>TitleofDocument__c</fullName>
    <description>PacPoint-FT120419 - Created for PVL phase 1</description>
    <label>Title of Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>