force-app/main/default/objects/Requisition__c/fields/TitleofEnvelope__c.field-meta.xml
<CustomField>
    <fullName>TitleofEnvelope__c</fullName>
    <description>PacPoint-FT1210419 - Created for PVL phase 1</description>
    <label>Title of Envelope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>