force-app/main/default/objects/Requisition__c/validationRules/ConfirmSignatureRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmSignatureRequired</fullName>
    <active>true</active>
    <description>PacPoint-MV120519 - Created for PVL phase 1</description>
    <errorConditionFormula>IF(
 AND(
  NOT(ISBLANK(DatetobeCompletedBy__c)),
  ConfirmSignature__c = false
 ), 
 true, 
 false
)</errorConditionFormula>
    <errorMessage>Please confirm your signature</errorMessage>
</ValidationRule>