force-app/main/default/objects/Requisition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AdministratorExecutiveDirector__c</columns>
    <columns>BoardProgram__c</columns>
    <columns>LicenseType__c</columns>
    <columns>DatetobeCompletedBy__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>